tests/ui/parser/macro/macro-keyword.rs
fn macro() {  //~ ERROR expected identifier, found reserved keyword `macro`
}

pub fn main() {
}

// ferrocene-annotations: fls_lish33a1naw5
// Keywords
//
// ferrocene-annotations: fls_cbsgp6k0qa82
// Reserved Keywords
